ajoute mecanisme réecriture url

--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -1,4 +1,6 @@
 ;configuration pour le développement
+[Installation]
+racineWeb = /Gestion-Publications-UTT/
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=Gestion_Publication_UTT;charset=utf8'
