integration de modification publication

--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -5,4 +5,4 @@ racineWeb = /Gestion-Publications-UTT/
 [BD]
 dsn = 'mysql:host=localhost;dbname=Gestion_Publication_UTT;charset=utf8'
 login = root
-mdp = P16_LO07 
+mdp = root
